--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
